--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 .banner {
     height: 240px; /* Высота баннера, можете изменить */
-    background-image: url('banner.gif'); /* ЗАМЕНИТЕ НА ССЫЛКУ НА ВАШ БАННЕР */
+    background-image: url('ProfileImage/banner.gif'); /* ЗАМЕНИТЕ НА ССЫЛКУ НА ВАШ БАННЕР */
     background-size: cover;
     background-position: center;
     border-radius: 12px;
@@ -44,6 +44,16 @@ body {
     left: 50%;
     top: 180px; /* Сдвигаем вниз (Высота баннера - половина высоты аватара) = 240px - 60px */
     transform: translateX(-50%);
+}
+
+/*
+=====================================================
+    СТИЛИ ДЛЯ SVG-ИКОНОК В КНОПКАХ
+=====================================================
+*/
+.link-card-icon {
+    width: 28px;  /* Задаем ширину, как у других иконок */
+    height: 28px; /* Задаем высоту */
 }
 
 /* 
@@ -95,6 +105,9 @@ body {
 .link-card .fa-twitch { color: #9146FF; }
 .link-card .fa-telegram { color: #2AABEE; }
 .link-card .fa-gamepad { color: #F04747; }
+.link-card .valorant-icon {
+    filter: invert(34%) sepia(98%) saturate(3436%) hue-rotate(344deg) brightness(93%) contrast(91%);
+}
 
 
 .link-card span {
